Cambio de nombre imagenes

--- a/index.html
+++ b/index.html
@@ -351,6 +351,6 @@
         <span>Hola, Chatea con nosotros?</span>
     </a>
 
-    <script src="src/main.ts" type="module"></script>
+    <script src="./src/main.js" type="module"></script>
 </body>
 </html>
